# project_hj_final

./: .gitignore  COMMAND.md  README.md  rviz.rviz
src/HJ/: colored_pcd_publisher.py  custom_tf_broadcaster.py  landmark_saver.py  sam3.py  sam3_final_poses.txt  sam3_gravity_aligned.py  sam3_gravity_poses.txt  virtual_camera_node.py  yolo_inference.py
src/HJ/golden_pose_tracker/: compare_pose_node.py  golden_pose_node.py  pose_comparison_results.txt
src/controls/robot_control/: package.xml  setup.py
src/controls/unity_ros_client/: README.md  setup.cfg  setup.py
src/controls/unity_ros_interfaces/: CMakeLists.txt
src/controls/unity_ros_interfaces/srv/: PcdService.srv
src/intention/: package.xml  setup.cfg  setup.py
src/intention/intention/: fake_box_pose_publisher.py  gemini.py  intention_transformer.py  virtual_robot_description_publisher.py
src/object_estimation/: package.xml  setup.cfg  setup.py
src/object_estimation/object_estimation/: sam3_real_time.py  sam3_virtual_box_publisher.py  yolo_real_time.py
src/object_estimation/resource/: sam3_gravity_poses_0512.txt  saved_landmarks.txt
src/odom/: odom_to_camera_tf_publisher.py  static_tf_publisher.py
src/robot_control/robot_control/: joint_state_publisher.py  quest_teleop_EE (사본).py  quest_teleop_base.py  test.py  test_servo.py
src/serial/: CMakeLists.txt  package.xml
src/unity_ros_client/: package.xml  setup.py
src/unity_ros_client/unity_ros_client/: cmd_publisher.py  cmd_publisher_timer.py  pcd_custom_service.py  pcd_service.py
src/unity_ros_interfaces/: package.xml
(+11 files in other folders)
